# paper-analyzer

./: Gemini_Comment.md  HANDOFF.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  deps.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: analysis.rs  mod.rs  network.rs  search.rs  settings.rs
src-tauri/src/models/: config.rs  mod.rs  network.rs  paper.rs
src-tauri/src/services/: citation.rs  graph.rs  llm.rs  mod.rs  pubmed.rs
src/components/: AiReport.tsx  NetworkGraph.tsx  PaperCard.tsx  PaperList.tsx  TopPapers.tsx
src/config/: constants.ts
src/pages/: ResultsPage.tsx  SearchPage.tsx  SettingsPage.tsx
src/services/: tauriCommands.ts
src/styles/: AiReport.css  NetworkGraph.css  PaperCard.css  ResultsPage.css  SearchPage.css  SettingsPage.css  TopPapers.css
src/types/: index.ts
