[package]
name = "paper-analyzer"
version = "0.1.0"
description = "ScholarLens - Cross-platform Scientific Literature Analysis Tool"
authors = ["you"]
edition = "2021"

[lib]
name = "paper_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "charset"] }
quick-xml = { version = "0.37", features = ["serialize"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
